trying different database

--- a/src/assets/ARcontents/house.html
+++ b/src/assets/ARcontents/house.html
@@ -45,7 +45,7 @@
 
 
     </a-entity>
-        <a-text color="red" align="right" baseline="center" width="1" position="0.5 0 0" value="Right\nof box\n(even\nwhen\nmulti-\nline)" text=""></a-text>
+        <a-text color="red" align="right" baseline="center" width="1" position="0.5 0 0" value="Welcome to HIT 381" text=""></a-text>
 
 
        <a-entity
