--- a/src/assets/ARcontents/forest.html
+++ b/src/assets/ARcontents/forest.html
@@ -18,7 +18,7 @@
 
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera type='pattern' url='coyote.patt' >
-        <a-entity scale=".7 .7 .7" >
+        <a-entity scale="1 1 1" >
           <!--Download GLTF files from google poly-->
             <a-entity gltf-model="forest/PUSHILIN_forest.gltf"  crossOrigin="anonymous">
                <a-animation attribute="rotation"
